fluxengine-local-test/src/test/dsl/junit/InternalTestProjectの移行/error/20190322/rule/AC24PrintedAdgroupName.dsl
test 1 掲載データ-広告グループが投入する場合:
   2019/01/23 21:01:00:
       AC24PrintedAdgroupNameEvent:
           media: "YSS"                          # 対象媒体
           accountId: 2400001                    # アカウントID
           adgroupId: 24001                      # 広告グループID
           adgroupName: "広告グループ名"         # 広告グループ名
           reportDate: "2019/01/29"              # レポート取得日